# uRobotics

./: .gitignore  CMakeLists.txt  ClassDiagram.cd  uRobotics.sln  uRobotics.vcproj  uRoboticsDll.vcproj  uRoboticsLibTester.vcproj
src/: AsyncCommandExecuter.cpp  ByteArraySharedVariable.cpp  ByteSharedVariable.cpp  Command.cpp  CommandExecuter.cpp  CommandExecuterCollection.cpp  DoubleArraySharedVariable.cpp  DoubleSharedVariable.cpp  Exception.cpp  HumanFace.cpp  IntArraySharedVariable.cpp  IntSharedVariable.cpp  LaserReadingASV.cpp  LongArraySharedVariable.cpp  LongSharedVariable.cpp  MathUtil.cpp  MathUtilTables.cpp  MessageBase.cpp  Parser.cpp  RecognizedSpeech.cpp  RecognizedSpeechAlternate.cpp  Response.cpp  Scanner.cpp  Session.cpp  SharedVariable.cpp  SharedVariableInfo.cpp  SharedVariableList.cpp  SharedVariableReport.cpp  SharedVariableReportType.cpp  SharedVariableSubscriptionType.cpp  SimpleCommandManager.cpp  SimpleConnectionManager.cpp  Stopwatch.cpp  StringSharedVariable.cpp  SubscriptionInfo.cpp  SyncCommandExecuter.cpp  TcpPacket.cpp  Utils.cpp  VarSharedVariable.cpp
test/: Module.cpp  Module.h  SumCommandExecuter.cpp  SumCommandExecuter.h  main.cpp
uRobotics/utilities/: ProducerConsumer.h
